# pdf2txt

./: README.md  pyproject.toml
src/pdf2txt/: __init__.py  cli.py  reader.py
